Edit Register Bug
